# samael

./: Cargo.toml  bindings.h  bindings.rs
.github/workflows/: tests.yml
examples/: cert.cer  privatekey.pem  sp-initiated.rs  sp.rs
src/: attribute.rs  bindings.rs  crypto.rs  key_info.rs  lib.rs  service_provider.rs  signature.rs  utils.rs
src/idp/: mod.rs  response_builder.rs  sp_extractor.rs  verified_request.rs
src/metadata/: affiliation_descriptor.rs  attribute_consuming_service.rs  contact_person.rs  encryption_method.rs  endpoint.rs  entity_descriptor.rs  key_descriptor.rs  mod.rs  organization.rs  sp_sso_descriptor.rs
src/schema/: assertion.rs  attribute_statement.rs  authn_request.rs  conditions.rs  encrypted_assertion.rs  issuer.rs  mod.rs  name_id.rs  name_id_policy.rs  response.rs  subject.rs
src/xmlsec/: keys.rs  mod.rs  xmldsig.rs  xmlsec.rs
test_vectors/: signed_response.txt
tests/: idp-xmlsec.rs  signed-assertion.rs
