[package]
name = "samael"
version = "0.0.8"
authors = ["Nathan Jaremko <nathan@jaremko.ca>", "Alex Grinman <me@alexgr.in>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/njaremko/samael"
description = "A SAML2 library for Rust"
keywords = ["saml", "saml2", "xml", "sso"]
categories = ["authentication"]
build = "bindings.rs"

[features]
xmlsec = ["libc", "lazy_static", "libxml"]

[build-dependencies]
pkg-config = "0.3.27"
bindgen    = "0.65.1"

[dependencies]
openssl = "0.10.55"
openssl-sys = "0.9.88"
url = "2.3.1"
chrono = { version = "0.4.25", features = ["serde"] }
base64 = "0.21.2"
flate2 = "1.0.26"
snafu = "0.7.4"
derive_builder = "0.12.0"
libxml = { version = "0.3.2", optional = true }
uuid = { version = "1.3.3", features = ["v4"] }
data-encoding = "2.4.0"
libc        = { version = "0.2.144", optional = true }
lazy_static = { version = "1.4.0", optional = true }
yaserde = "0.8.0"
yaserde_derive = "0.8.0"
xml-rs = "0.8.13"

[dev-dependencies]
cookie = { version = "0.17.0", features = ["private", "key-expansion"] }
lazy_static = "1.4.0"
openssl-probe = "0.1.5"
reqwest = "0.11.18"
tokio = { version = "1.28.2", features = ["full"] }
warp = "0.3.5"
